examples/test/testpolicy13304.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13304
  namespace: namespace2
spec:
  podSelector:
    matchLabels:
      key7: value2
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key23: value20
          key28: value25
      podSelector:
        matchLabels:
          key3: value46
          key33: value36
